# CleanAppData

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.tmp  LICENSE  README.md  folders_description.yaml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml  release.yml  test.yml
docs/项目迁移/: ACCEPTANCE_项目迁移.md  ALIGNMENT_项目迁移.md  CONSENSUS_项目迁移.md  DESIGN_项目迁移.md  FINAL_项目迁移.md  TASK_项目迁移.md  TODO_项目迁移.md
src/: about.rs  ai_config.rs  ai_state.rs  ai_ui.rs  confirmation.rs  database.rs  delete.rs  ignore.rs  logger.rs  main.rs  move.rs  move_module.rs  open.rs  scanner.rs  stats.rs  stats_logger.rs  ui.rs  utils.rs  yaml_loader.rs
src/tabs/: about_tab.rs  ai_ui_tab.rs  clear_tab.rs  mod.rs
