[package]
name = "AppDataCleaner"
version = "1.0.6-b4"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
dirs-next = "2.0"
walkdir = "2.4"
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4"
simplelog = "0.12"
sha2 = "0.10"
native-dialog = "0.7.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.40"
rusqlite = { version = "0.32", features = ["bundled"] }
